<resources>
    <string name="app_name" translatable="false">Poems</string>
    <string name="author">Author</string>
    <string name="title_of_poem">Title of poem</string>
    <string name="year_of_writing">Year of writing</string>
    <string name="place_of_writing">Place of writing</string>
    <string name="write_your_poem_here">Write your poem here</string>
    <string name="go_back">Go back</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="delete_all">Delete all</string>
    <string name="sort_poems">Sort by poems</string>
    <string name="sort_poets">Sort by poets</string>
    <string name="sort_poems_by_favourites">Sort poems by favourites</string>
    <string name="sort_poems_by_date_oldest_first">Sort poems by date (oldest first)</string>
    <string name="sort_poems_by_date_new_first">Sort poems by date (new first)</string>
    <string name="write_your_own_poem">Write your own poem</string>
    <string name="there_s_nothing_here_yet_click_the_button_and_start_creating">There\'s nothing here yet.\n Click the button and start creating.</string>
    <string name="customise_everything_for_you">Customise everything for you</string>
    <string name="choose_background_colour">Choose background colour</string>
    <string name="choose_text_size">Choose text size</string>
    <string name="aa">Aa</string>
    <string name="poems">Poems</string>
    <string name="write">Write</string>
    <string name="settings">Settings</string>
    <string name="fav_updated">Favorite updated</string>
    <string name="successfully_deleted">Successfully deleted:</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete</string>
    <string name="successfully_deleted_everything">Successfully deleted everything</string>
    <string name="allert_yes">Yes</string>
    <string name="allert_no">No</string>
    <string name="delete_everything">Delete everything?</string>
    <string name="are_you_sure_to_delete_everything">Are you sure you want to delete everything?</string>
    <string name="delete_question">Delete</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="fields_not_fill">"Something went wrong! Probably all fields are not filled in"</string>
    <string name="wrong_date">It seems you\'re living in the future! Change the date</string>
    <string name="poem_added">Poem successfully added!</string>



    <string-array name="select_color">
        <item>Signal black</item>
        <item>Medium Persian blue</item>
        <item>Anthracite grey</item>
        <item>Light sand</item>
        <item>Silver</item>
        <item>Very light yellow-green</item>
        <item>Sea green Crayola</item>
        <item>Creamy yellow</item>
        <item>Honeydew</item>
        <item>Just white</item>
    </string-array>

    <string-array name="select_size">
        <item>100%</item>
        <item>150%</item>
        <item>200%</item>
        <item>250%</item>
        <item>300%</item>
        <item>350%</item>
        <item>400%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
    </string-array>

    <string-array name="motivation">
        <item>Just do it</item>
        <item>“Success is not final; failure is not fatal: It is the courage to continue that counts.” — Winston Churchill</item>
        <item>“Either you run the day or the day runs you.” — Jim Rohn</item>
        <item>Today is a good day</item>
        <item>Yes...</item>
        <item>"In three words I can sum up everything I've learned about life: It goes on." — Robert Frost</item>
        <item>“Be yourself; everyone else is already taken.” — Oscar Wilde</item>
        <item>“It does not matter how slowly you go, as long as you do not stop.” — Confucius</item>
    </string-array>
</resources>