<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_all_poems"
        android:icon="@drawable/ic_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort_poem_by_alpha"
        android:icon="@drawable/ic_sort_by_alph"
        android:title="@string/sort_poems"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_poet_by_alpha"
        android:icon="@drawable/ic_sort_by_alph"
        android:title="@string/sort_poets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_poem_by_fav"
        android:icon="@drawable/ic_fav"
        android:title="@string/sort_poems_by_favourites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_poem_by_date_old"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_poems_by_date_oldest_first"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_poem_by_date_new"
        android:icon="@drawable/ic_sort"
        android:title="Sort poems by date (new first)"
        app:showAsAction="never" />

</menu>